--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,15 @@
 ﻿@page "/"
 
+
+
 <PageTitle>Home</PageTitle>
 
-<h1>Bem-Vindo ao sistemas de cartão de Credito</h1>
+<h1 style="font-size: 35px; font-weight: normal; color: #072d57;">Bem-Vindo ao sistemas de cartão de Credito</h1>
 
-Aqui vocêvai conseguir criar, visualizar e excluir transações com o seu cartão de credito visa ou master.
+Aqui você vai conseguir criar, visualizar e excluir transações com o seu cartão de credito visa ou mastercard.
+<br><br>
+<img src="https://assets.umbler.com/site/migration/umblerito-migration-header.png?v=20240705114947" style="width:300px; height:350px; margin-left:180px;" alt="Imagem dinâmica" class="custom-image" />
+
+@code {
+    private string imageUrl = "img/inicial.png";
+}
