--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,3 +9,9 @@
 @using Microsoft.JSInterop
 @using CartaoCard
 @using CartaoCard.Components
+
+
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
+
+
